--- a/04-Bicycle/imoocmanager/package.json
+++ b/04-Bicycle/imoocmanager/package.json
@@ -11,9 +11,15 @@
     "axios": "^0.19.2",
     "craco-antd": "^1.18.0",
     "craco-less": "^1.17.0",
+    "draft-js": "^0.11.6",
+    "draftjs-to-html": "^0.9.1",
+    "echarts": "^4.8.0",
+    "echarts-for-react": "^2.0.16",
     "jsonp": "^0.2.1",
+    "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
