--- a/06-lkmanager/lkmanager/package.json
+++ b/06-lkmanager/lkmanager/package.json
@@ -10,6 +10,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "md5": "^2.2.1",
+    "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
