--- a/06-lkmanager/lkmanager_api/package.json
+++ b/06-lkmanager/lkmanager_api/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "echarts": "^4.8.0",
     "express": "^4.17.1",
     "nunjucks": "^3.2.1"
   },
