--- a/06-lkmanager/lkmanager_api/package.json
+++ b/06-lkmanager/lkmanager_api/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.0",
     "echarts": "^4.8.0",
     "express": "^4.17.1",
+    "font-awesome": "^4.7.0",
     "nunjucks": "^3.2.1"
   },
   "devDependencies": {
