--- a/06-lkmanager/lkmanager_api/package.json
+++ b/06-lkmanager/lkmanager_api/package.json
@@ -15,6 +15,7 @@
     "echarts": "^4.8.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "nunjucks": "^3.2.1"
   },
   "devDependencies": {
