--- a/06-lkmanager/lkmanager_api/package.json
+++ b/06-lkmanager/lkmanager_api/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "nprogress": "^0.2.0",
     "nunjucks": "^3.2.1"
   },
   "devDependencies": {
