--- a/06-lkmanager/lkmanager_api/package.json
+++ b/06-lkmanager/lkmanager_api/package.json
@@ -19,7 +19,8 @@
     "jquery": "^3.5.1",
     "mongoose": "^5.9.25",
     "nprogress": "^0.2.0",
-    "nunjucks": "^3.2.1"
+    "nunjucks": "^3.2.1",
+    "twbs-pagination": "^1.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
